chore: add tests, services and docs for orders :memo:
